Fix overflow x bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,8 +6,8 @@
 //   outline: 1px red solid;
 // }
 
-.body {
-  overflow-x: hidden;
+body {
+  overflow-x: hidden !important;
 }
 
 .active {
